fixed the jumping bug

--- a/sheets.css
+++ b/sheets.css
@@ -39,7 +39,13 @@
 	text-align: center;
 	transition: opacity 1s;
   vertical-align: right;
+  animation: .25s 2 alternate bounce;
 
+}
+.content:hover {
+   opacity: 1;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 .item {
 	height: 76px;
@@ -60,7 +66,7 @@
 	text-align: center;
 	transition: opacity 1s;
   animation: .25s 2 alternate bounce, slideopen;
-  margin:0 auto;
+
 }
 
 .item:hover {
